--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "react": "^18",
-        "react-dom": "^18",
-        "next": "14.2.4",
         "@react-email/components": "^0.0.7",
         "@react-email/tailwind": "^0.0.8",
         "@types/node": "20.3.2",
@@ -22,7 +19,10 @@
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
+        "next": "14.2.4",
         "postcss": "8.4.24",
+        "react": "^18",
+        "react-dom": "^18",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.10.1",
         "react-intersection-observer": "^9.5.2",
@@ -32,13 +32,14 @@
         "typescript": "5.1.5"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-vertical-timeline-component": "^3.3.6",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.4"
+        "typescript": "^5"
     }
 }
